--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Hello world only react",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -w test/helper/browser.js src/*.spec.js",
+    "dev:hot": "webpack-dev-server --hot --port 8082 --inline --progress --colors --watch --display-error-details --display-cached --content-base ./",
+    "start": "webpack-dev-server --port 8081 --inline --content-base ./src"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +19,13 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "webpack": "^1.14.0"
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-15": "^1.0.2",
+    "jsdom": "^11.3.0",
+    "mocha": "^4.0.1",
+    "react-addons-test-utils": "^15.6.2",
+    "webpack": "^1.14.0",
+    "http-server": "^0.9.0",
+    "webpack-dev-server": "^1.16.2"    
   }
 }
